--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.SharedNotesKotlin"
         tools:targetApi="31">
         <activity
-            android:name=".EditRootNoteActivity"
+            android:name=".presentation.EditRootNoteActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.MainActivity"
