--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/Theme.SharedNotesKotlin"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.EditRootNoteActivity"
+            android:name=".presentation.editRootNoteActivity.EditNoteActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.mainActivity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
